[package]
name = "library_loader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bin_io = { path = "../bin_io/", features = ["library"] }
wee_alloc = "0.4.5"
wasm-bindgen = { version = "0.2.79", features = [

]}
#js-sys = "0.3.56"

[dependencies.web-sys]
version = "0.3.4"
features = [
	"Document",
	"Text",
	"Element",
	"Window",
	"ReadableStream",
]
